# PlayIntegrityFix

./: .gitignore  .gitmodules  README.md  build.gradle.kts  changelog.md  pif.json  settings.gradle.kts  update.json
.github/: FUNDING.yml  (+1 more)
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  classes_dex.h  classes_hex.h  dex.h  inject.cpp  json.hpp  log.h  main.cpp  module.cpp  zygisk.hpp
app/src/main/cpp/Dobby/: CMakeLists.txt  README.md
app/src/main/cpp/Dobby/.github/workflows/: Builder.yaml
app/src/main/cpp/Dobby/builtin-plugin/: CMakeLists.txt
app/src/main/cpp/Dobby/builtin-plugin/ApplicationEventMonitor/: MGCopyAnswerMonitor.cc  dynamic_loader_monitor.cc  memory_operation_instrument.cc  posix_file_descriptor_operation_monitor.cc  posix_socket_network_monitor.cc
app/src/main/cpp/Dobby/builtin-plugin/BionicLinkerUtil/: bionic_linker_demo.cc  bionic_linker_util.cc  bionic_linker_util.h
app/src/main/cpp/Dobby/builtin-plugin/ImportTableReplace/: CMakeLists.txt  dobby_import_replace.cc  dobby_import_replace.h
app/src/main/cpp/Dobby/builtin-plugin/ObjcRuntimeReplace/: CMakeLists.txt  dobby_objc_runtime_repalce.h  dobby_objc_runtime_replace.mm  objc_runtime_replace.mm
app/src/main/cpp/Dobby/builtin-plugin/SupervisorCallMonitor/: mach_system_call_log_handler.cc  sensitive_api_monitor.cc  supervisor_call_monitor.cc  system_call_log_handler.cc  test_supervisor_call_monitor.cc
app/src/main/cpp/Dobby/builtin-plugin/SymbolResolver/: CMakeLists.txt  dobby_symbol_resolver.h  mmap_file_util.h
app/src/main/cpp/Dobby/builtin-plugin/SymbolResolver/elf/: dobby_symbol_resolver.cc
app/src/main/cpp/Dobby/builtin-plugin/SymbolResolver/macho/: dobby_symbol_resolver.cc  dobby_symbol_resolver_priv.h  dyld_shared_cache_symbol_table_iterator.cc  macho_ctx.cc  macho_ctx.h  macho_file_symbol_resolver.cpp  macho_file_symbol_resolver.h  shared_cache_ctx.cpp  shared_cache_ctx.h  shared_cache_internal.h
app/src/main/cpp/Dobby/builtin-plugin/SymbolResolver/pe/: dobby_symbol_resolver.cc
app/src/main/cpp/Dobby/cmake/: Util.cmake  auto_source_group.cmake  build_environment_check.cmake  compiler_and_linker.cmake  dobby.xcode.source.cmake
app/src/main/cpp/Dobby/cmake/platform/: platform-darwin.cmake
app/src/main/cpp/Dobby/docs/: compile.md
app/src/main/cpp/Dobby/examples/: CMakeLists.txt  main.cc  socket_example.cc
app/src/main/cpp/Dobby/include/: dobby.h
app/src/main/cpp/Dobby/scripts/: Dockerfile  platform_builder.py  setup_linux_cross_compile.sh  setup_macos_cross_compile.sh
app/src/main/cpp/Dobby/source/: InterceptEntry.cpp  InterceptEntry.h  Interceptor.cpp  Interceptor.h  dobby.cpp  dobby_internal.h
app/src/main/cpp/Dobby/source/InstructionRelocation/: InstructionRelocation.h
app/src/main/cpp/Dobby/source/InstructionRelocation/arm/: InstructionRelocationARM.cc  InstructionRelocationARM.h
app/src/main/cpp/Dobby/source/InstructionRelocation/arm64/: InstructionRelocationARM64.cc  InstructionRelocationARM64.h  inst_constants.h  inst_decode_encode_kit.h
app/src/main/cpp/Dobby/source/InterceptRouting/: InterceptRouting.cpp  InterceptRouting.h
app/src/main/cpp/Dobby/source/MemoryAllocator/: AssemblyCodeBuilder.cc  AssemblyCodeBuilder.h  MemoryAllocator.cc  NearMemoryAllocator.cc  NearMemoryAllocator.h
app/src/main/cpp/Dobby/source/PlatformUnifiedInterface/: MemoryAllocator.h  platform.h
app/src/main/cpp/Dobby/source/PlatformUtil/: ProcessRuntimeUtility.h
app/src/main/cpp/Dobby/source/dobby/: common.h  dobby_internal.h  kernel_mode_header.h  pac_kit.h  platform_features.h  types.h  utility_macro.h
app/src/main/cpp/Dobby/source/include/: common_header.h  kernel_mode_header.h  platform_header.h  platform_macro.h  type_header.h
app/src/main/cpp/Dobby/tests/: CMakeLists.txt  UniconEmulator.cpp  UniconEmulator.h  test_insn_decoder_x86.cpp  test_insn_relo_arm.cpp  test_insn_relo_arm64.cpp  test_insn_relo_x64.cpp  test_native.cpp
app/src/main/cpp/bytehook/: bh_cfi.c  bh_cfi.h  bh_const.h  bh_core.c  bh_core.h  bh_dl.c  bh_dl.h  bh_dl_iterate.c  bh_dl_iterate.h  bh_dl_monitor.c  bh_dl_monitor.h  bh_elf.c  bh_elf.h  bh_elf_manager.c  bh_elf_manager.h  bh_hook.c  bh_hook.h  bh_hook_manager.c  bh_hook_manager.h  bh_jni.c  bh_linker.c  bh_linker.h  bh_linker_mutex.c  bh_linker_mutex.h  bh_log.c  bh_log.h  bh_recorder.c  bh_recorder.h  bh_sleb128.c  bh_sleb128.h  bh_task.c  bh_task.h  bh_task_manager.c  bh_task_manager.h  bh_trampo.c  bh_trampo.h  bh_trampo_arm.c  bh_trampo_arm64.c  bh_trampo_x86.c  bh_trampo_x86_64.c  (+4 more)
app/src/main/cpp/bytehook/include/: bytehook.h
app/src/main/cpp/dobby/: dobby.h
app/src/main/cpp/libcxx/: Android.mk  README.md
app/src/main/cpp/libcxx/cmake/caches/: AndroidNDK.cmake
app/src/main/cpp/libcxx/include/: __config_site
app/src/main/cpp/libcxx/lib/abi/: x86_64-none-linux-android21.libcxxabi.v1.stable.exceptions.nonew.abilist
app/src/main/cpp/libcxx/src/abi/: CMakeLists.txt
app/src/main/cpp/libcxx/test/configs/: llvm-libc++-android-ndk.cfg.in
app/src/main/cpp/libcxx/utils/: adb_run.py
app/src/main/cpp/libcxx/utils/ci/: Dockerfile.android  android-create-avd.sh  android-set-user.sh  run-buildbot  run-buildbot-container-android
app/src/main/cpp/shadowhook/: CMakeLists.txt  sh_enter.c  sh_enter.h  sh_exit.c  sh_exit.h  sh_hub.c  sh_hub.h  sh_jni.c  sh_linker.c  sh_linker.h  sh_recorder.c  sh_recorder.h  sh_safe.c  sh_safe.h  sh_switch.c  sh_switch.h  sh_task.c  sh_task.h  shadowhook.c  shadowhook.map.txt
app/src/main/cpp/shadowhook/arch/arm/: sh_a32.c  sh_a32.h  sh_inst.c  sh_inst.h  sh_t16.c  sh_t16.h  sh_t32.c  sh_t32.h  sh_txx.c  sh_txx.h
app/src/main/cpp/shadowhook/arch/arm64/: sh_a64.c  sh_a64.h  sh_inst.c  sh_inst.h
app/src/main/cpp/shadowhook/common/: bytesig.c  bytesig.h  sh_config.h  sh_errno.c  sh_errno.h  sh_log.c  sh_log.h  sh_sig.h  sh_trampo.c  sh_trampo.h  sh_util.c  sh_util.h
app/src/main/cpp/shadowhook/include/: shadowhook.h
zygisk/src/main/cpp/xdl/: CMakeLists.txt  xdl.c  xdl.map.txt  xdl_iterate.c  xdl_iterate.h  xdl_linker.c  xdl_linker.h  xdl_util.h
zygisk/src/main/cpp/xdl/include/: xdl.h
(+178 files in other folders)
